--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_motion_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_motion_control.yaml
@@ -236,28 +236,44 @@ variables:
     {% if morning_motion_activated_helper_input %}
       {{ is_state(morning_motion_activated_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_morning' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_morning_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_morning_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
     {% endif %}
   motion_activated_day: >-
     {% if day_motion_activated_helper_input %}
       {{ is_state(day_motion_activated_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_day' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_day_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_day_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
     {% endif %}
   motion_activated_evening: >-
     {% if evening_motion_activated_helper_input %}
       {{ is_state(evening_motion_activated_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_evening' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_evening_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_evening_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
     {% endif %}
   motion_activated_night: >-
     {% if night_motion_activated_helper_input %}
       {{ is_state(night_motion_activated_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_night' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_night_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_night_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
     {% endif %}
 
@@ -265,7 +281,11 @@ variables:
     {% if morning_auto_off_helper %}
       {{ states(morning_auto_off_helper) | int(0) }}
     {% else %}
-      {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_morning' %}
+      {% if is_weekday %}
+        {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_morning_weekday' %}
+      {% else %}
+        {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_morning_weekend' %}
+      {% endif %}
       {% set val = states(helper) %}
       {% if val not in ['unknown', 'unavailable', ''] %}
         {{ val | int(15) }}
@@ -277,7 +297,11 @@ variables:
     {% if day_auto_off_helper %}
       {{ states(day_auto_off_helper) | int(0) }}
     {% else %}
-      {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_day' %}
+      {% if is_weekday %}
+        {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_day_weekday' %}
+      {% else %}
+        {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_day_weekend' %}
+      {% endif %}
       {% set val = states(helper) %}
       {% if val not in ['unknown', 'unavailable', ''] %}
         {{ val | int(15) }}
@@ -289,7 +313,11 @@ variables:
     {% if evening_auto_off_helper %}
       {{ states(evening_auto_off_helper) | int(0) }}
     {% else %}
-      {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_evening' %}
+      {% if is_weekday %}
+        {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_evening_weekday' %}
+      {% else %}
+        {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_evening_weekend' %}
+      {% endif %}
       {% set val = states(helper) %}
       {% if val not in ['unknown', 'unavailable', ''] %}
         {{ val | int(15) }}
@@ -301,7 +329,11 @@ variables:
     {% if night_auto_off_helper %}
       {{ states(night_auto_off_helper) | int(0) }}
     {% else %}
-      {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_night' %}
+      {% if is_weekday %}
+        {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_night_weekday' %}
+      {% else %}
+        {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_night_weekend' %}
+      {% endif %}
       {% set val = states(helper) %}
       {% if val not in ['unknown', 'unavailable', ''] %}
         {{ val | int(15) }}
