--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
@@ -261,56 +261,88 @@ variables:
     {% if enable_morning_helper_input %}
       {{ is_state(enable_morning_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_morning' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_morning_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_morning_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
     {% endif %}
   ao_morning: >-
     {% if auto_on_morning_helper_input %}
       {{ is_state(auto_on_morning_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_morning' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_morning_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_morning_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
     {% endif %}
   en_day: >-
     {% if enable_day_helper_input %}
       {{ is_state(enable_day_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_day' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_day_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_day_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
     {% endif %}
   ao_day: >-
     {% if auto_on_day_helper_input %}
       {{ is_state(auto_on_day_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_day' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_day_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_day_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
     {% endif %}
   en_evening: >-
     {% if enable_evening_helper_input %}
       {{ is_state(enable_evening_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_evening' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_evening_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_evening_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
     {% endif %}
   ao_evening: >-
     {% if auto_on_evening_helper_input %}
       {{ is_state(auto_on_evening_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_evening' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_evening_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_evening_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
     {% endif %}
   en_night: >-
     {% if enable_night_helper_input %}
       {{ is_state(enable_night_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_night' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_night_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.enable_' ~ room_key_var ~ '_night_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
     {% endif %}
   ao_night: >-
     {% if auto_on_night_helper_input %}
       {{ is_state(auto_on_night_helper_input, 'on') }}
     {% else %}
-      {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_night' %}
+      {% if is_weekday %}
+        {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_night_weekday' %}
+      {% else %}
+        {% set helper = 'input_boolean.auto_on_' ~ room_key_var ~ '_night_weekend' %}
+      {% endif %}
       {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
     {% endif %}
 
