--- a/gitops/apps/home-assistant/helpers-input-boolean-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-boolean-configmap.yaml
@@ -37,30 +37,102 @@ data:
     
     enable_bathroom_morning:
       name: Bathroom - Timer Morning Enabled
+    enable_bathroom_morning_weekday:
+      name: Bathroom - Timer Morning Enabled (Weekday)
+      initial: true
+    enable_bathroom_morning_weekend:
+      name: Bathroom - Timer Morning Enabled (Weekend)
+      initial: true
     enable_bathroom_day:
       name: Bathroom - Timer Day Enabled
+    enable_bathroom_day_weekday:
+      name: Bathroom - Timer Day Enabled (Weekday)
+      initial: true
+    enable_bathroom_day_weekend:
+      name: Bathroom - Timer Day Enabled (Weekend)
+      initial: true
     enable_bathroom_evening:
       name: Bathroom - Timer Evening Enabled
+    enable_bathroom_evening_weekday:
+      name: Bathroom - Timer Evening Enabled (Weekday)
+      initial: true
+    enable_bathroom_evening_weekend:
+      name: Bathroom - Timer Evening Enabled (Weekend)
+      initial: true
     enable_bathroom_night:
       name: Bathroom - Timer Night Enabled
+    enable_bathroom_night_weekday:
+      name: Bathroom - Timer Night Enabled (Weekday)
+      initial: true
+    enable_bathroom_night_weekend:
+      name: Bathroom - Timer Night Enabled (Weekend)
+      initial: true
     
     auto_on_bathroom_morning:
       name: Bathroom - Timer Morning Auto-on
+    auto_on_bathroom_morning_weekday:
+      name: Bathroom - Timer Morning Auto-on (Weekday)
+      initial: false
+    auto_on_bathroom_morning_weekend:
+      name: Bathroom - Timer Morning Auto-on (Weekend)
+      initial: false
     auto_on_bathroom_day:
       name: Bathroom - Timer Day Auto-on
+    auto_on_bathroom_day_weekday:
+      name: Bathroom - Timer Day Auto-on (Weekday)
+      initial: false
+    auto_on_bathroom_day_weekend:
+      name: Bathroom - Timer Day Auto-on (Weekend)
+      initial: false
     auto_on_bathroom_evening:
       name: Bathroom - Timer Evening Auto-on
+    auto_on_bathroom_evening_weekday:
+      name: Bathroom - Timer Evening Auto-on (Weekday)
+      initial: false
+    auto_on_bathroom_evening_weekend:
+      name: Bathroom - Timer Evening Auto-on (Weekend)
+      initial: false
     auto_on_bathroom_night:
       name: Bathroom - Timer Night Auto-on
+    auto_on_bathroom_night_weekday:
+      name: Bathroom - Timer Night Auto-on (Weekday)
+      initial: false
+    auto_on_bathroom_night_weekend:
+      name: Bathroom - Timer Night Auto-on (Weekend)
+      initial: false
     
     motion_activated_bathroom_morning:
       name: Bathroom - Motion Morning Activated
+    motion_activated_bathroom_morning_weekday:
+      name: Bathroom - Motion Morning Activated (Weekday)
+      initial: true
+    motion_activated_bathroom_morning_weekend:
+      name: Bathroom - Motion Morning Activated (Weekend)
+      initial: true
     motion_activated_bathroom_day:
       name: Bathroom - Motion Day Activated
+    motion_activated_bathroom_day_weekday:
+      name: Bathroom - Motion Day Activated (Weekday)
+      initial: true
+    motion_activated_bathroom_day_weekend:
+      name: Bathroom - Motion Day Activated (Weekend)
+      initial: true
     motion_activated_bathroom_evening:
       name: Bathroom - Motion Evening Activated
+    motion_activated_bathroom_evening_weekday:
+      name: Bathroom - Motion Evening Activated (Weekday)
+      initial: true
+    motion_activated_bathroom_evening_weekend:
+      name: Bathroom - Motion Evening Activated (Weekend)
+      initial: true
     motion_activated_bathroom_night:
       name: Bathroom - Motion Night Activated
+    motion_activated_bathroom_night_weekday:
+      name: Bathroom - Motion Night Activated (Weekday)
+      initial: true
+    motion_activated_bathroom_night_weekend:
+      name: Bathroom - Motion Night Activated (Weekend)
+      initial: true
     
     # Day-of-week helpers for morning slot
     bathroom_morning_sunday:
@@ -187,30 +259,102 @@ data:
     
     enable_bedroom_morning:
       name: Bedroom - Timer Morning Enabled
+    enable_bedroom_morning_weekday:
+      name: Bedroom - Timer Morning Enabled (Weekday)
+      initial: true
+    enable_bedroom_morning_weekend:
+      name: Bedroom - Timer Morning Enabled (Weekend)
+      initial: true
     enable_bedroom_day:
       name: Bedroom - Timer Day Enabled
+    enable_bedroom_day_weekday:
+      name: Bedroom - Timer Day Enabled (Weekday)
+      initial: true
+    enable_bedroom_day_weekend:
+      name: Bedroom - Timer Day Enabled (Weekend)
+      initial: true
     enable_bedroom_evening:
       name: Bedroom - Timer Evening Enabled
+    enable_bedroom_evening_weekday:
+      name: Bedroom - Timer Evening Enabled (Weekday)
+      initial: true
+    enable_bedroom_evening_weekend:
+      name: Bedroom - Timer Evening Enabled (Weekend)
+      initial: true
     enable_bedroom_night:
       name: Bedroom - Timer Night Enabled
+    enable_bedroom_night_weekday:
+      name: Bedroom - Timer Night Enabled (Weekday)
+      initial: true
+    enable_bedroom_night_weekend:
+      name: Bedroom - Timer Night Enabled (Weekend)
+      initial: true
     
     auto_on_bedroom_morning:
       name: Bedroom - Timer Morning Auto-on
+    auto_on_bedroom_morning_weekday:
+      name: Bedroom - Timer Morning Auto-on (Weekday)
+      initial: false
+    auto_on_bedroom_morning_weekend:
+      name: Bedroom - Timer Morning Auto-on (Weekend)
+      initial: false
     auto_on_bedroom_day:
       name: Bedroom - Timer Day Auto-on
+    auto_on_bedroom_day_weekday:
+      name: Bedroom - Timer Day Auto-on (Weekday)
+      initial: false
+    auto_on_bedroom_day_weekend:
+      name: Bedroom - Timer Day Auto-on (Weekend)
+      initial: false
     auto_on_bedroom_evening:
       name: Bedroom - Timer Evening Auto-on
+    auto_on_bedroom_evening_weekday:
+      name: Bedroom - Timer Evening Auto-on (Weekday)
+      initial: false
+    auto_on_bedroom_evening_weekend:
+      name: Bedroom - Timer Evening Auto-on (Weekend)
+      initial: false
     auto_on_bedroom_night:
       name: Bedroom - Timer Night Auto-on
+    auto_on_bedroom_night_weekday:
+      name: Bedroom - Timer Night Auto-on (Weekday)
+      initial: false
+    auto_on_bedroom_night_weekend:
+      name: Bedroom - Timer Night Auto-on (Weekend)
+      initial: false
     
     motion_activated_bedroom_morning:
       name: Bedroom - Motion Morning Activated
+    motion_activated_bedroom_morning_weekday:
+      name: Bedroom - Motion Morning Activated (Weekday)
+      initial: true
+    motion_activated_bedroom_morning_weekend:
+      name: Bedroom - Motion Morning Activated (Weekend)
+      initial: true
     motion_activated_bedroom_day:
       name: Bedroom - Motion Day Activated
+    motion_activated_bedroom_day_weekday:
+      name: Bedroom - Motion Day Activated (Weekday)
+      initial: true
+    motion_activated_bedroom_day_weekend:
+      name: Bedroom - Motion Day Activated (Weekend)
+      initial: true
     motion_activated_bedroom_evening:
       name: Bedroom - Motion Evening Activated
+    motion_activated_bedroom_evening_weekday:
+      name: Bedroom - Motion Evening Activated (Weekday)
+      initial: true
+    motion_activated_bedroom_evening_weekend:
+      name: Bedroom - Motion Evening Activated (Weekend)
+      initial: true
     motion_activated_bedroom_night:
       name: Bedroom - Motion Night Activated
+    motion_activated_bedroom_night_weekday:
+      name: Bedroom - Motion Night Activated (Weekday)
+      initial: true
+    motion_activated_bedroom_night_weekend:
+      name: Bedroom - Motion Night Activated (Weekend)
+      initial: true
     
     # Day-of-week helpers for morning slot
     bedroom_morning_sunday:
@@ -337,30 +481,102 @@ data:
     
     enable_hallway_morning:
       name: Hallway - Timer Morning Enabled
+    enable_hallway_morning_weekday:
+      name: Hallway - Timer Morning Enabled (Weekday)
+      initial: true
+    enable_hallway_morning_weekend:
+      name: Hallway - Timer Morning Enabled (Weekend)
+      initial: true
     enable_hallway_day:
       name: Hallway - Timer Day Enabled
+    enable_hallway_day_weekday:
+      name: Hallway - Timer Day Enabled (Weekday)
+      initial: true
+    enable_hallway_day_weekend:
+      name: Hallway - Timer Day Enabled (Weekend)
+      initial: true
     enable_hallway_evening:
       name: Hallway - Timer Evening Enabled
+    enable_hallway_evening_weekday:
+      name: Hallway - Timer Evening Enabled (Weekday)
+      initial: true
+    enable_hallway_evening_weekend:
+      name: Hallway - Timer Evening Enabled (Weekend)
+      initial: true
     enable_hallway_night:
       name: Hallway - Timer Night Enabled
+    enable_hallway_night_weekday:
+      name: Hallway - Timer Night Enabled (Weekday)
+      initial: true
+    enable_hallway_night_weekend:
+      name: Hallway - Timer Night Enabled (Weekend)
+      initial: true
     
     auto_on_hallway_morning:
       name: Hallway - Timer Morning Auto-on
+    auto_on_hallway_morning_weekday:
+      name: Hallway - Timer Morning Auto-on (Weekday)
+      initial: false
+    auto_on_hallway_morning_weekend:
+      name: Hallway - Timer Morning Auto-on (Weekend)
+      initial: false
     auto_on_hallway_day:
       name: Hallway - Timer Day Auto-on
+    auto_on_hallway_day_weekday:
+      name: Hallway - Timer Day Auto-on (Weekday)
+      initial: false
+    auto_on_hallway_day_weekend:
+      name: Hallway - Timer Day Auto-on (Weekend)
+      initial: false
     auto_on_hallway_evening:
       name: Hallway - Timer Evening Auto-on
+    auto_on_hallway_evening_weekday:
+      name: Hallway - Timer Evening Auto-on (Weekday)
+      initial: false
+    auto_on_hallway_evening_weekend:
+      name: Hallway - Timer Evening Auto-on (Weekend)
+      initial: false
     auto_on_hallway_night:
       name: Hallway - Timer Night Auto-on
+    auto_on_hallway_night_weekday:
+      name: Hallway - Timer Night Auto-on (Weekday)
+      initial: false
+    auto_on_hallway_night_weekend:
+      name: Hallway - Timer Night Auto-on (Weekend)
+      initial: false
     
     motion_activated_hallway_morning:
       name: Hallway - Motion Morning Activated
+    motion_activated_hallway_morning_weekday:
+      name: Hallway - Motion Morning Activated (Weekday)
+      initial: true
+    motion_activated_hallway_morning_weekend:
+      name: Hallway - Motion Morning Activated (Weekend)
+      initial: true
     motion_activated_hallway_day:
       name: Hallway - Motion Day Activated
+    motion_activated_hallway_day_weekday:
+      name: Hallway - Motion Day Activated (Weekday)
+      initial: true
+    motion_activated_hallway_day_weekend:
+      name: Hallway - Motion Day Activated (Weekend)
+      initial: true
     motion_activated_hallway_evening:
       name: Hallway - Motion Evening Activated
+    motion_activated_hallway_evening_weekday:
+      name: Hallway - Motion Evening Activated (Weekday)
+      initial: true
+    motion_activated_hallway_evening_weekend:
+      name: Hallway - Motion Evening Activated (Weekend)
+      initial: true
     motion_activated_hallway_night:
       name: Hallway - Motion Night Activated
+    motion_activated_hallway_night_weekday:
+      name: Hallway - Motion Night Activated (Weekday)
+      initial: true
+    motion_activated_hallway_night_weekend:
+      name: Hallway - Motion Night Activated (Weekend)
+      initial: true
     
     # Day-of-week helpers for morning slot
     hallway_morning_sunday:
@@ -487,30 +703,102 @@ data:
     
     enable_kitchen_morning:
       name: Kitchen - Timer Morning Enabled
+    enable_kitchen_morning_weekday:
+      name: Kitchen - Timer Morning Enabled (Weekday)
+      initial: true
+    enable_kitchen_morning_weekend:
+      name: Kitchen - Timer Morning Enabled (Weekend)
+      initial: true
     enable_kitchen_day:
       name: Kitchen - Timer Day Enabled
+    enable_kitchen_day_weekday:
+      name: Kitchen - Timer Day Enabled (Weekday)
+      initial: true
+    enable_kitchen_day_weekend:
+      name: Kitchen - Timer Day Enabled (Weekend)
+      initial: true
     enable_kitchen_evening:
       name: Kitchen - Timer Evening Enabled
+    enable_kitchen_evening_weekday:
+      name: Kitchen - Timer Evening Enabled (Weekday)
+      initial: true
+    enable_kitchen_evening_weekend:
+      name: Kitchen - Timer Evening Enabled (Weekend)
+      initial: true
     enable_kitchen_night:
       name: Kitchen - Timer Night Enabled
+    enable_kitchen_night_weekday:
+      name: Kitchen - Timer Night Enabled (Weekday)
+      initial: true
+    enable_kitchen_night_weekend:
+      name: Kitchen - Timer Night Enabled (Weekend)
+      initial: true
     
     auto_on_kitchen_morning:
       name: Kitchen - Timer Morning Auto-on
+    auto_on_kitchen_morning_weekday:
+      name: Kitchen - Timer Morning Auto-on (Weekday)
+      initial: false
+    auto_on_kitchen_morning_weekend:
+      name: Kitchen - Timer Morning Auto-on (Weekend)
+      initial: false
     auto_on_kitchen_day:
       name: Kitchen - Timer Day Auto-on
+    auto_on_kitchen_day_weekday:
+      name: Kitchen - Timer Day Auto-on (Weekday)
+      initial: false
+    auto_on_kitchen_day_weekend:
+      name: Kitchen - Timer Day Auto-on (Weekend)
+      initial: false
     auto_on_kitchen_evening:
       name: Kitchen - Timer Evening Auto-on
+    auto_on_kitchen_evening_weekday:
+      name: Kitchen - Timer Evening Auto-on (Weekday)
+      initial: false
+    auto_on_kitchen_evening_weekend:
+      name: Kitchen - Timer Evening Auto-on (Weekend)
+      initial: false
     auto_on_kitchen_night:
       name: Kitchen - Timer Night Auto-on
+    auto_on_kitchen_night_weekday:
+      name: Kitchen - Timer Night Auto-on (Weekday)
+      initial: false
+    auto_on_kitchen_night_weekend:
+      name: Kitchen - Timer Night Auto-on (Weekend)
+      initial: false
     
     motion_activated_kitchen_morning:
       name: Kitchen - Motion Morning Activated
+    motion_activated_kitchen_morning_weekday:
+      name: Kitchen - Motion Morning Activated (Weekday)
+      initial: true
+    motion_activated_kitchen_morning_weekend:
+      name: Kitchen - Motion Morning Activated (Weekend)
+      initial: true
     motion_activated_kitchen_day:
       name: Kitchen - Motion Day Activated
+    motion_activated_kitchen_day_weekday:
+      name: Kitchen - Motion Day Activated (Weekday)
+      initial: true
+    motion_activated_kitchen_day_weekend:
+      name: Kitchen - Motion Day Activated (Weekend)
+      initial: true
     motion_activated_kitchen_evening:
       name: Kitchen - Motion Evening Activated
+    motion_activated_kitchen_evening_weekday:
+      name: Kitchen - Motion Evening Activated (Weekday)
+      initial: true
+    motion_activated_kitchen_evening_weekend:
+      name: Kitchen - Motion Evening Activated (Weekend)
+      initial: true
     motion_activated_kitchen_night:
       name: Kitchen - Motion Night Activated
+    motion_activated_kitchen_night_weekday:
+      name: Kitchen - Motion Night Activated (Weekday)
+      initial: true
+    motion_activated_kitchen_night_weekend:
+      name: Kitchen - Motion Night Activated (Weekend)
+      initial: true
     
     # Day-of-week helpers for morning slot
     kitchen_morning_sunday:
@@ -637,30 +925,102 @@ data:
     
     enable_living_room_morning:
       name: Living Room - Timer Morning Enabled
+    enable_living_room_morning_weekday:
+      name: Living Room - Timer Morning Enabled (Weekday)
+      initial: true
+    enable_living_room_morning_weekend:
+      name: Living Room - Timer Morning Enabled (Weekend)
+      initial: true
     enable_living_room_day:
       name: Living Room - Timer Day Enabled
+    enable_living_room_day_weekday:
+      name: Living Room - Timer Day Enabled (Weekday)
+      initial: true
+    enable_living_room_day_weekend:
+      name: Living Room - Timer Day Enabled (Weekend)
+      initial: true
     enable_living_room_evening:
       name: Living Room - Timer Evening Enabled
+    enable_living_room_evening_weekday:
+      name: Living Room - Timer Evening Enabled (Weekday)
+      initial: true
+    enable_living_room_evening_weekend:
+      name: Living Room - Timer Evening Enabled (Weekend)
+      initial: true
     enable_living_room_night:
       name: Living Room - Timer Night Enabled
+    enable_living_room_night_weekday:
+      name: Living Room - Timer Night Enabled (Weekday)
+      initial: true
+    enable_living_room_night_weekend:
+      name: Living Room - Timer Night Enabled (Weekend)
+      initial: true
     
     auto_on_living_room_morning:
       name: Living Room - Timer Morning Auto-on
+    auto_on_living_room_morning_weekday:
+      name: Living Room - Timer Morning Auto-on (Weekday)
+      initial: false
+    auto_on_living_room_morning_weekend:
+      name: Living Room - Timer Morning Auto-on (Weekend)
+      initial: false
     auto_on_living_room_day:
       name: Living Room - Timer Day Auto-on
+    auto_on_living_room_day_weekday:
+      name: Living Room - Timer Day Auto-on (Weekday)
+      initial: false
+    auto_on_living_room_day_weekend:
+      name: Living Room - Timer Day Auto-on (Weekend)
+      initial: false
     auto_on_living_room_evening:
       name: Living Room - Timer Evening Auto-on
+    auto_on_living_room_evening_weekday:
+      name: Living Room - Timer Evening Auto-on (Weekday)
+      initial: false
+    auto_on_living_room_evening_weekend:
+      name: Living Room - Timer Evening Auto-on (Weekend)
+      initial: false
     auto_on_living_room_night:
       name: Living Room - Timer Night Auto-on
+    auto_on_living_room_night_weekday:
+      name: Living Room - Timer Night Auto-on (Weekday)
+      initial: false
+    auto_on_living_room_night_weekend:
+      name: Living Room - Timer Night Auto-on (Weekend)
+      initial: false
     
     motion_activated_living_room_morning:
       name: Living Room - Motion Morning Activated
+    motion_activated_living_room_morning_weekday:
+      name: Living Room - Motion Morning Activated (Weekday)
+      initial: true
+    motion_activated_living_room_morning_weekend:
+      name: Living Room - Motion Morning Activated (Weekend)
+      initial: true
     motion_activated_living_room_day:
       name: Living Room - Motion Day Activated
+    motion_activated_living_room_day_weekday:
+      name: Living Room - Motion Day Activated (Weekday)
+      initial: true
+    motion_activated_living_room_day_weekend:
+      name: Living Room - Motion Day Activated (Weekend)
+      initial: true
     motion_activated_living_room_evening:
       name: Living Room - Motion Evening Activated
+    motion_activated_living_room_evening_weekday:
+      name: Living Room - Motion Evening Activated (Weekday)
+      initial: true
+    motion_activated_living_room_evening_weekend:
+      name: Living Room - Motion Evening Activated (Weekend)
+      initial: true
     motion_activated_living_room_night:
       name: Living Room - Motion Night Activated
+    motion_activated_living_room_night_weekday:
+      name: Living Room - Motion Night Activated (Weekday)
+      initial: true
+    motion_activated_living_room_night_weekend:
+      name: Living Room - Motion Night Activated (Weekend)
+      initial: true
     
     # Day-of-week helpers for morning slot
     living_room_morning_sunday:
